fixed problem with background overlap in mobile version

--- a/src/layout/Sidebar/sass/sidebar.module.scss
+++ b/src/layout/Sidebar/sass/sidebar.module.scss
@@ -1,10 +1,12 @@
 .nav {
-  position: absolute;
+  //position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   width: 100%;
   z-index: 10;
+  position: fixed;
+
 }
 
 .background {
